--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="formrow">
                 <select id="country" name="country" class="form-control">
                     <option value="">Choose your country</option>
-                    <option value="Afghanistan">Afghanistan</option>
+                    <option value="fghanistan">Afghanistan</option>
                     <option value="Åland Islands">Åland Islands</option>
                     <option value="Albania">Albania</option>
                     <option value="Algeria">Algeria</option>
